LOVE 0.10.0 []
--------------

Released: N/A

  * Added a (work-in-progress) iOS port.
  * Added the flag t.accelerometerjoystick to love.conf. Disables accelerometer-as-joystick functionality on mobile devices when false.
  * Added the flag t.gammacorrect to love.conf (replaces t.window.srgb.) Enabling it globally enables gamma-correct rendering, when supported.
  * Added love.touch module. Note that it has important differences from the touch implementation in the LÖVE 0.9 Android and iOS ports.
  * Added love.touchpressed, love.touchreleased, and love.touchmoved.
  * Added love.filesystem.setRequirePath and love.filesystem.getRequirePath.
  * Added love.filedropped and love.directorydropped event callback functions.
  * Added love.lowmemory event callback function, called when the app is running out of memory on mobile operating systems.
  * Added love.textedited event callback function, called when the user is compositing text (e.g. via an IME.)
  * Added love.wheelmoved event callback function (replaces "wu" and "wd" constants for love.mousepressed.)
  * Added love.mouse.hasCursor.
  * Added a boolean argument to love.mousepressed and love.mousereleased indicating whether the button event originated from a touch press.
  * Added more mouse button constants ("x3", "x4", and "x5".)
  * Added optional x/y/width/height arguments to love.keyboard.setTextInput. They tell the system where text will show up so on-screen keyboards can avoid that area.
  * Added Source:getType (replaces Source:isStatic.)
  * Added love.graphics.ellipse.
  * Added rounded-rectangle support to love.graphics.rectangle.
  * Added an optional boolean argument to love.graphics.setBlendMode which indicates whether the blend mode should multiply alpha with rgb for the source color. It is true by default.
  * Added love.graphics.getSupported (replaces love.graphics.isSupported.)
  * Added love.graphics.getSystemLimits (replaces love.graphics.getSystemLimit.)